cambiar nombre de homepage

--- a/package.json
+++ b/package.json
@@ -51,5 +51,5 @@
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8"
   },
-  "homepage": "https://marcoshitaa.github.io/portfolio"
+  "homepage": "https://marcoshita.es"
 }
