--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Marcos Hita",
+  "name": "Marcos Hita Portfolio",
   "icons": [
     {
       "src": "%PUBLIC_URL%/favicon.ico",
